# bb-qs_manager

./: CMakeLists.txt  has_member.hpp  qs_manager.h
example/: CMakeLists.txt  main.cpp  stdafx.h
